# musix

./: .env.example  .gitignore  AGENTS.md  Caddyfile  Caddyfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  setup.sh
apps/api/: Dockerfile  Dockerfile.dev  pyproject.toml
apps/api/app/: catalog.py  config.py  database.py  deps.py  ids.py  main.py  models.py  schemas.py  security.py  soundbanks_sync.py
apps/api/app/audio/: runner.py  worker.py
apps/api/app/audio/engines/: __init__.py  _keys.py  audio_separator_engine.py  base.py  basic_pitch_engine.py  demucs_engine.py  essentia_engine.py  librosa_engine.py  probe.py
apps/api/app/db/: __init__.py  base.py  dynamo.py  sql.py  sqlite.py
apps/api/app/routers/: admin.py  audio.py  auth.py  contact.py  folders.py  instruments.py  projects.py  render.py  score.py
apps/api/app/services/: captcha.py  email.py  midi_convert.py  score_engine.py
apps/api/app/sfz/: saw.sfz  sine.sfz  square.sfz  triangle.sfz
apps/api/app/storage/: __init__.py  base.py  caching.py  local.py  s3.py
apps/score-engine/: package-lock.json  package.json
apps/score-engine/src/: build.mjs  index.mjs  ir.mjs  ops.mjs  selftest.mjs
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docs/: AUDIO-ENGINES.md  AUDIO_EXPORT.md  FORK.md  ROADMAP-DEV.md  SCORE-API.md
scripts/: build-alphatab-fork.sh  deploy.sh  fetch-soundbanks.sh  init-aws-resources.py  push-soundbanks-s3.sh
soundbanks/: README.md  manifest.json
(+50 files in other folders)
