[project]
name = "musix-api"
version = "0.1.0"
description = "Musix backend — FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "boto3>=1.34",
    "python-ulid>=2.2",
    "pydantic-settings>=2.3",
    "pydantic[email]>=2.7",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "pyguitarpro>=0.10",
    "mido>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.routers", "app.storage", "app.db", "app.services", "app.audio", "app.audio.engines"]
